@@ -1,7 +1,13 @@
-2012-10-01  Simon Cook <simon.cook@embecosm.com>
+2012-12-12  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
-  * arc-versions.sh: Update for branches to build 4.8 toolchain.
-  * build-all.sh: Temporarily disable 4.8 uClibc building.
+	* arc-versions.sh: Simplified to use just --auto-checkout and
+	--auto-pull options for all repositories.
+	* build-all.sh: Add --auto-checkout/--no-auto-checkout and
+	--no-auto-pull. Remove linux_user_spec.
+
+2012-12-07  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* build-linux.sh: New script
 
 2012-09-06  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
